--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.5",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
-    "img-loader": "^2.0.0",
     "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   }
