--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "author": "George Geeslin",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^2.7.1",
     "firebase": "^4.6.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
+    "react-chartjs-2": "^2.6.4",
     "react-dom": "^15.6.1",
     "react-google-button": "^0.4.0",
     "react-redux": "^5.0.6",
