--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "dependencies": {
     "chart.js": "^2.7.1",
     "firebase": "^4.6.1",
+    "firebaseui": "^2.6.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
     "react-chartjs-2": "^2.6.4",
     "react-dom": "^15.6.1",
+    "react-firebaseui": "^1.1.9",
     "react-google-button": "^0.4.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
