--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "George Geeslin",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "chart.js": "^2.7.1",
     "firebase": "^4.6.1",
     "firebaseui": "^2.6.3",
@@ -34,6 +35,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
